--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "del": "^5.1.0",
     "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
     "gulp-copy": "^4.0.1",
+    "gulp-minify": "^3.1.0",
     "gulp-sass": "^4.1.0",
     "gulp-scss": "^1.4.0",
     "gulp-serve": "^1.4.0",
